--- a/dev-game/04-teste-inimigos.html
+++ b/dev-game/04-teste-inimigos.html
@@ -31,6 +31,38 @@
 
         var teclado = new Teclado(document);
         var animacao = new Animacao(context);
+
+        var nave = new Nave(context, teclado, imgNave);
+        animacao.novoSprite(nave);
+
+        var colisor = new Colisor();
+        colisor.novoSprite(nave);
+
+        teclado.disparou(ESPACO, function(){
+            nave.atirar();
+        });
+
+        //Carregamento e inicialização
+        var carregadas = 0;
+
+        function carregando(){
+            carregadas++;
+            if(carregadas == 2) iniciar();
+        }
+
+        function iniciar(){
+            nave.x = canvas.width / 2 - imgNave.width / 2;
+            nave.y = canvas.height - imgNave.height;
+            nave.velocidade = 5;
+            animacao.ligar();
+
+            setInterval(novoOvni, 1000);
+        }
+
+        //Criação dos inimigos
+        function novoOvni(){
+            
+        }
     </script>
 </body>
 </html>
