--- a/recent-game/jogo-definitivo.html
+++ b/recent-game/jogo-definitivo.html
@@ -14,9 +14,31 @@
     <script src="js/tiro.js"></script>
     <script src="js/colisor.js"></script>
     <script src="js/ovni.js"></script>
+    <script src="js/spritesheet.js"></script>
+    <script src="js/explosao.js"></script>
+    <script src="js/painel.js"></script>
+
+    <style>
+        #link_jogar{
+            display: none;
+            color: yellow;
+            background: url(img/botao-jogar.png);
+            font-family: sans-serif;
+            font-size: 20px;
+            text-decoration: none;
+            text-shadow: 2px 2px 5px black;
+            position: absolute;
+            left: 220px;
+            top: 330px;
+            width: 52px;
+            height: 26px;
+            padding: 23px 10px;
+        }
+    </style>
 </head>
 <body>
     <canvas id="canvas_animacao" width="500" height="500"></canvas>
+    <a id="link_jogar" href="javascript: iniciarJogo()">Jogar</a>
     <script>
         //Canvas e Context
         var canvas = document.getElementById('canvas_animacao');
@@ -25,9 +47,11 @@
         //Variáveis principais
         var imagens, animacao, teclado, colisor, nave, criadorInimigos;
         var totalImagens = 0, carregadas = 0;
+        var musicaAcao;
 
         //Começa carregando as imagens
         carregarImagens();
+        carregarMusicas();
 
         function carregarImagens() {
             //Objeto contendo os nomes das imagens
@@ -35,8 +59,9 @@
                 espaco: 'fundo-espaco.png',
                 estrelas: 'fundo-estrelas.png',
                 nuvens: 'fundo-nuvens.png',
-                nave: 'nave.png',
-                ovni: 'ovni.png'
+                nave: 'nave-spritesheet.png',
+                ovni: 'ovni.png',
+                explosao: 'explosao.png'
             };
 
             //Carregar todas
@@ -51,13 +76,228 @@
             }
         }
 
+        function carregarMusicas(){
+            musicaAcao = new Audio();
+            musicaAcao.src = 'snd/musica-acao.mp3';
+            musicaAcao.load();
+            musicaAcao.volume = 0.8;
+            musicaAcao.loop = true;
+        }
+
         function carregando(){
+            context.save();
+
+            //Fundo
+            context.drawImage(imagens.espaco, 0, 0, canvas.width, canvas.height);
+
+            //Texto "Carregando"
+            context.fillStyle = 'white';
+            context.strokeStyle = 'black';
+            context.font = '50px sans-serif';
+            context.fillText("Carregando", 100, 200);
+            context.strokeText("Carregando", 100, 200);
+
+            //Barra de loading
             carregadas++;
-            if(carregadas == totalImagens) iniciarObjetos();
+
+            var tamanhoTotal = 300;
+            var tamanho = carregadas / totalImagens * tamanhoTotal;
+            context.fillStyle = 'yellow';
+            context.fillRect(100, 250, tamanho, 50);
+
+            context.restore();
+
+            if(carregadas == totalImagens){ 
+                iniciarObjetos();
+                mostrarLinkJogar();
+            }
         }
 
         function iniciarObjetos(){
             //Objetos principais
+            animacao = new Animacao(context);
+            teclado = new Teclado(document);
+            colisor = new Colisor();
+            espaco = new Fundo(context, imagens.espaco);
+            estrelas = new Fundo(context, imagens.estrelas);
+            nuvens = new Fundo(context, imagens.nuvens);
+            nave = new Nave(context, teclado, imagens.nave, imagens.explosao);
+            painel = new Painel(context, nave)
+
+            //Ligações entre objetos
+            animacao.novoSprite(espaco);
+            animacao.novoSprite(estrelas);
+            animacao.novoSprite(nuvens);
+            animacao.novoSprite(painel);
+            animacao.novoSprite(nave);
+
+            colisor.novoSprite(nave);
+            animacao.novoProcessamento(colisor);
+
+            configuracoesIniciais();
+        }
+
+        function configuracoesIniciais(){
+            //Fundos
+            espaco.velocidade = 60;
+            estrelas.velocidade = 150;
+            nuvens.velocidade = 500;
+
+            //Nave
+            nave.posicionar();
+            nave.velocidade = 200;
+
+            criacaoInimigos();
+
+            //Game Over
+            nave.acabaramVidas = function(){
+                animacao.desligar();
+                gameOver();
+            }
+
+            colisor.aoColidir = function(o1, o2){
+                //Tiro com Ovni
+                if((o1 instanceof Tiro && o2 instanceof Ovni) || (o1 instanceof Ovni && o2 instanceof Tiro))
+                    painel.pontuacao += 10;
+            }
+        }
+
+        function criacaoInimigos(){
+            var criador = {
+                ultimoOvni: new Date().getTime(),
+                processar: function(){
+                    var agora = new Date().getTime();
+                    var decorrido = agora - this.ultimoOvni;
+
+                    if(decorrido > 1000){
+                        novoOvni();
+                        this.ultimoOvni = agora;
+                    }
+                }
+            };
+            animacao.novoProcessamento(criador);
+        }
+
+        function novoOvni(){
+            var imgOvni = imagens.ovni;
+            var ovni = new Ovni(context, imgOvni, imagens.explosao);
+
+            //Mínimo: 120; máximo: 500
+            ovni.velocidade = Math.floor(100 + Math.random() * (500 - 120 + 1)) * (this.animacao.decorrido / 1000);
+
+            //Mínimo: 0; Máximo: largura do canvas - largura do ovni
+            ovni.x = Math.floor(Math.random() * (canvas.width - imgOvni.width + 1));
+
+            //Descontar a altura
+            ovni.y = - imgOvni.height;
+
+            animacao.novoSprite(ovni);
+            colisor.novoSprite(ovni);
+        }
+
+        function pausarJogo(){
+            if(animacao.ligado){
+                animacao.desligar();
+                musicaAcao.pause();
+                ativarTiro(false);
+
+                //Escrever "Pausado"
+                context.save();
+                context.fillStyle = 'white';
+                context.strokeStyle = 'black';
+                context.font = '50px sans-serif';
+                context.fillText("Pausado", 160, 200);
+                context.strokeText("Pausado", 160, 200);
+                context.restore();
+            }
+            else{
+                criacaoInimigos.ultimoOvni = new Date().getTime();
+                animacao.ligar();
+                musicaAcao.play();
+                ativarTiro(true);
+            }
+        }
+        
+        function ativarTiro(ativar){
+            if(ativar){
+                teclado.disparou(ESPACO, function(){
+                    nave.atirar();
+                });
+            }
+            else{
+                teclado.disparou(ESPACO, null);
+            }
+        }
+
+        function mostrarLinkJogar(){
+            document.getElementById('link_jogar').style.display = 'block';
+        }
+
+        function iniciarJogo(){
+            criadorInimigos.ultimoOvni = new Date().getTime();
+
+            //Tiro
+            ativarTiro(true);
+
+            //Pausa
+            teclado.disparou(ENTER, pausarJogo);
+
+            //Cheatcode
+            teclado.disparou(TAB, cheatCode);
+
+            //Zerando a pontuação
+            painel.pontuacao = 0;
+
+            document.getElementById('link_jogar').style.display = 'none';
+            musicaAcao.play();
+            animacao.ligar();
+        }
+
+        function cheatCode(){
+            var code = prompt("Digite o Número de vidas extras:");
+            nave.vidasExtras = code;
+        }
+
+        function gameOver(){
+            //Tiro
+            ativarTiro(false);
+
+            //Pausa
+            teclado.disparou(ENTER, null);
+
+            //Parar a música e rebobinar
+            musicaAcao.pause();
+            musicaAcao.currentTime = 0.0;
+
+            //Fundo
+            context.drawImage(imagens.espaco, 0, 0, canvas.width, canvas.height);
+
+            //Texto "GAME OVER"
+            context.save();
+            context.fillStyle = 'white';
+            context.strokeStyle = 'black';
+            context.font = '70px sans-serif';
+            context.fillText("GAME OVER", 40, 200);
+            context.strokeText("GAME OVER", 40, 200);
+            context.restore();
+
+            //Volta o link "Jogar"
+            mostrarLinkJogar();
+
+            //Restaurar as condições da nave
+            nave.vidasExtras = 3;
+            nave.posicionar();
+            animacao.novoSprite(nave);
+            colisor.novoSprite(nave);
+
+            removerInimigos();
+        }
+
+        function removerInimigos(){
+            for(var i in animacao.sprites){
+                if(animacao.sprites[i] instanceof Ovni)
+                    animacao.excluirSprite(animacao.sprites[i]);
+            }
         }
     </script>
 </body>
